# urban_university

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml
.trunk/: trunk.yaml
basic_operator/code_style/: module_2_3.py
basic_operator/cycle_for/: module_2_4.py
basic_operator/func_with_param/: module_2_5.py
basic_operator/practical_task/: module_2_hard.py
basic_operator/сonditional_construction/: module_2_2.py
basic_struct/average_score/: main.py
basic_struct/dicts_and_sets/: module_1_6.py
basic_struct/dynamic_typing/: module_1_3.py
basic_struct/program_organization_and_string_methods/: module_1_4.py
basic_struct/string_and_string_indexing/: main.py
basic_struct/tuples_ans_lists/: module_1_5.py
basic_struct/variables/: main.py
classes_and_objects/attributes_and_methods_object/: module_5_1.py
classes_and_objects/classes_attributes/: module_5_4.py
classes_and_objects/operator_overloading/: module_5_3.py
classes_and_objects/practical_task/: module_5_hard.py  ur_tube.py  user.py  video.py
classes_and_objects/special_class_method/: module_5_2.py
errors/creating_exceptions/: module_8_3.py
errors/hard_stack_error/: module_8_2.py
errors/try_except/: module_8_1.py
files_and_formatted_output/file_tell/: module_7_2.py
files_and_formatted_output/files_in_os/: module_7_5.py
files_and_formatted_output/formatting_string/: module_7_4.py
files_and_formatted_output/operator_with/: module_7_3.py
files_and_formatted_output/work_mode_open_files/: module_7_1.py
functional_programming_tools/creating_functions/: module_9_4.py
functional_programming_tools/decorators/: module_9_7.py
functional_programming_tools/generator_assemblies/: module_9_3.py
functional_programming_tools/generators/: module_9_6.py
functional_programming_tools/introducing_functional_programming/: module_9_1.py
introduction/: task1.py  task2.py  task3.py  task4.py
string_and_string_indexing/: main.py
(+23 files in other folders)
